[workspace]
resolver = "2"

members = [
  "vqn-core",
  "vqn-cli"
]

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.5.0"
quinn = "0.10.2"
tokio = { version = "1.35.1" }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
rustls-pemfile = "1.0.0"
rustls = { version = "0.21.0", default-features = false, features = ["quic"] }
serde = { version = "1.0.0", features = ["derive"] }
toml = "0.8.8"
