[package]
name = "vqn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.22"
bytes = "1.5.0"
clap = { version = "^4.4.8", features = ["derive"] }
cmd_lib = "1.9.3"
console-subscriber = "0.1.5"
futures = "0.3.30"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
nix = { version = "0.27.1", features = ["socket", "sched"] }
quinn = "0.10.2"
rustls = { version = "0.21.0", default-features = false, features = ["quic"] }
rustls-pemfile = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "signal", "macros", "tracing"] }
tokio-util = { version = "0.7.10", features = ["full", "codec", "tracing"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tun = { version = "0.6.1" }
url = { version = "2.5.0", features = ["serde"] }

[[bin]]
name = "vqn"
path = "src/main.rs"

[profile.release]
lto = true
# Use only 1 codegen-unit to enable full optimizations.
codegen-units = 1
