[package]
name = "vqn-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.22"
url = "2.5.0"
tracing = { workspace = true } 
tracing-subscriber = { workspace = true }
clap = { version = "^4.4.8", features = ["derive"] }
quinn = { workspace = true } 
vqn-core = { path = "../vqn-core" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
rustls-pemfile = { workspace = true } 
rustls = { workspace = "true" }
