[package]
name = "vqn-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { workspace = true } 
# rustls = { version = "0.21.0", default-features = false, features = ["quic"] }
tun = { version = "0.6.1", features = ["async"] }
tun-tap = { version = "0.1.4" }
bytes = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rustls = { workspace = "true" }
ip_network = "0.4.1"
packet = "0.1.4"
ip_network_table = "0.2.0"

