[package]
name = "vqn-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { workspace = true } 
tun = { version = "0.6.1" }
bytes = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
futures = { workspace = true }
rustls = { workspace = true }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
thiserror = "1.0.50"

